--- a/Quarto Presentation/Presentation_draft3.html
+++ b/Quarto Presentation/Presentation_draft3.html
@@ -871,7 +871,7 @@ Niharika Peddinenikalva
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"openEffect":"zoom","loop":false,"descPosition":"bottom","selector":".lightbox","closeEffect":"zoom"});
+    <script>var lightboxQuarto = GLightbox({"openEffect":"zoom","descPosition":"bottom","selector":".lightbox","loop":false,"closeEffect":"zoom"});
     (function() {
       let previousOnload = window.onload;
       window.onload = () => {
