--- a/Quarto Presentation/Presentation_draft4.html
+++ b/Quarto Presentation/Presentation_draft4.html
@@ -511,8 +511,8 @@ Niharika Peddinenikalva
 <p>[2] Poole, D. L., &amp; Mackworth, A. K. (2017). Artificial Intelligence: Foundations of Computational Agents (Second edition.). Cambridge University Press. https://doi.org/10.1017/9781108164085</p>
 </section>
 <section id="thank-you" class="slide level2">
-<h2>Thank you</h2>
-<p>Questions welcome.</p>
+<h2>Thank you!</h2>
+<p>Questions welcome. 🐷</p>
 <div class="quarto-auto-generated-content">
 <p><img src="Pig_watermark.svg" class="slide-logo"></p>
 <div class="footer footer-default">
@@ -917,7 +917,7 @@ Niharika Peddinenikalva
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"selector":".lightbox","openEffect":"zoom","closeEffect":"zoom","loop":false,"descPosition":"bottom"});
+    <script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"selector":".lightbox","openEffect":"zoom","descPosition":"bottom"});
     (function() {
       let previousOnload = window.onload;
       window.onload = () => {
