--- a/Quarto Presentation/Presentation_draft4.html
+++ b/Quarto Presentation/Presentation_draft4.html
@@ -362,7 +362,7 @@ Niharika Peddinenikalva
 
 </section>
 <section id="summary-of-our-findings" class="slide level2">
-<h2>Summary of our findings</h2>
+<h2>Summary of our findings 🐷</h2>
 <ul>
 <li class="fragment">We believe we have managed to reproduce all figures from the original paper.</li>
 <li class="fragment">We found that the figures of winning percentages were different from those in the paper.</li>
@@ -374,7 +374,7 @@ Niharika Peddinenikalva
 <div class="column" style="width:40%;">
 <ul>
 <li class="fragment">Each of the lines represents how the estimates for each of the win probabilities change as iterations of the algorithm are performed.</li>
-<li class="fragment">The win probability converges within the first <span class="math inline">\(25\)</span> iterations.</li>
+<li class="fragment">The win probability converges within the first <span class="math inline">\(25\)</span> iterations.🐷</li>
 <li class="fragment">Our figure differs in the first <span class="math inline">\(5\)</span> iterations.</li>
 </ul>
 </div><div class="column" style="width:60%;">
@@ -399,7 +399,7 @@ Niharika Peddinenikalva
 <div class="column" style="width:40%;">
 <ul>
 <li class="fragment">Figure 4 is a cross-section of Figure 3, as well as Figure 5 (see next slide).</li>
-<li class="fragment">Figure 4 is easier to compare to the graph created with our results, as it is only in two dimensions.</li>
+<li class="fragment">Figure 4 is easier to compare to the graph created with our results, as it is only in two dimensions.🐷</li>
 <li class="fragment">For lower values of player 1’s score they want to roll while they have a turn total of up to 23. This value decreases until a player score of around 72, at which point they wish to roll until they have won.</li>
 </ul>
 </div><div class="column" style="width:60%;">
@@ -464,7 +464,7 @@ Niharika Peddinenikalva
 </section>
 <section id="rs-of-neller-and-presser-i" class="slide level2">
 <h2>5 Rs of Neller and Presser (I)</h2>
-<p>Replicability refers to when an algorithm or solution can be recoded by someone else.</p>
+<p>Replicability refers to when an algorithm or solution can be recoded by someone else. 🐷</p>
 <ul>
 <li class="fragment"><p>The methodology as described in the paper is not replicable, in particular the description of the Value Iteration (V.I.) algorithm.</p></li>
 <li class="fragment"><p>We were able to replicate their figures and recoded their implementation from their description.</p></li>
@@ -477,7 +477,7 @@ Niharika Peddinenikalva
 <ul>
 <li class="fragment"><p>V.I. algorithm in terms of tolerance <span class="math inline">\(\Delta\)</span>, though tolerance not specified in paper. We had to use maximum number of iterations instead, as in MDP literature [2].</p></li>
 <li class="fragment"><p>Though we reproduced the figures, the 3D views were not easily comparable. And there were no specific values to verify except <span class="math inline">\(P_{(0,0,0)}\)</span>.</p></li>
-<li class="fragment"><p>The authors claimed that staged V.I. is more efficient but we found the opposite.</p></li>
+<li class="fragment"><p>The authors claimed that staged V.I. is more efficient but we found the opposite.🐷</p></li>
 </ul>
 </section>
 <section id="our-work-and-the-5rs-i" class="slide level2">
@@ -493,7 +493,7 @@ Niharika Peddinenikalva
 <h2>Our work and the 5Rs (II)</h2>
 <ul>
 <li class="fragment">Our code is reusable for simple extensions of Pig such as goal-n-Pig, and routinely adaptable to different versions of Pig with equations (e.g.&nbsp;two 6-sided dice losing with snake eyes, changes in input equation).</li>
-<li class="fragment">Further Piglet could be extended to have different goal numbers (twiglet, triglet, quiglet?).</li>
+<li class="fragment">Further Piglet could be extended to have different goal numbers (twiglet, triglet, quiglet?). 🐷</li>
 <li class="fragment">Did not explore other extensions mentioned in paper such as jeopardy approach games.</li>
 </ul>
 </section>
@@ -917,7 +917,7 @@ Niharika Peddinenikalva
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"selector":".lightbox","openEffect":"zoom","descPosition":"bottom"});
+    <script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","openEffect":"zoom","loop":false,"closeEffect":"zoom"});
     (function() {
       let previousOnload = window.onload;
       window.onload = () => {
