--- a/Quarto Presentation/Presentation_draft4.html
+++ b/Quarto Presentation/Presentation_draft4.html
@@ -445,7 +445,7 @@ Niharika Peddinenikalva
 <div class="columns">
 <div class="column" style="width:40%;">
 <ul>
-<li class="fragment">Figure 7 shows contours of different winning probabilities computed from the optimal policy.</li>
+<li class="fragment">Figure 7 shows contours of different winning probabilities computed from the optimal 🐖 policy.</li>
 <li class="fragment">We draw a contour wherein the states have a win probability that is within a threshold <span class="math inline">\(t\)</span> from the desired probability, e.g.&nbsp;in the interval <span class="math inline">\(x\% \pm t\)</span>.</li>
 <li class="fragment">The thresholds were manually selected for each of the <span class="math inline">\(4\)</span> probabilities in order to yield smooth surfaces.</li>
 </ul>
@@ -917,7 +917,7 @@ Niharika Peddinenikalva
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","openEffect":"zoom","loop":false,"closeEffect":"zoom"});
+    <script>var lightboxQuarto = GLightbox({"selector":".lightbox","loop":false,"openEffect":"zoom","descPosition":"bottom","closeEffect":"zoom"});
     (function() {
       let previousOnload = window.onload;
       window.onload = () => {
